# QtRapidCore

./: CMakeLists.txt  README.md
codeResources/templates/: CMakeLists.txt.template
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  projectcreator.cpp  projectcreator.h  projectpreviewdialog.cpp  projectpreviewdialog.h  projectpreviewdialog.ui
src/codeResources/app/application/: application.cpp  application.h
src/codeResources/app/singleapplication/: singleapplication.cpp  singleapplication.h
src/codeResources/infrastructure/event/: qeventforwarder.cpp  qeventforwarder.h
src/codeResources/infrastructure/fonts/: fontmanager.cpp  fontmanager.h
src/codeResources/infrastructure/logging/: loghelper.cpp  loghelper.h
templates/: CMakeLists.txt.template
